--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body id="body-class">
         <!-- Show hello world -->
         <h1 class="class">Hello World!</h1>
-        <h2 id="hp">Hello Philippines</h2>
+        <h2 id="hp">Hello Pipz</h2>
         <p>Lorem Ipsum</p>
     </body>
 </html>
